monitor/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-monitor:4180/oauth2/monitor/auth
    nginx.ingress.kubernetes.io/auth-signin: https://monitor.login.outi.ir/oauth2/monitor/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,Authorization
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitor.login.outi.ir
      secretName: monitor-tls
  rules:
    - host: monitor.login.outi.ir
      http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: monitor
                port:
                  name: http
